--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,38 +1,175 @@
-.App {
-  text-align: center;
+header {
+  height: 12rem;
+  background-color: rgb(32, 32, 32);
+  position: fixed;
+  /* z-index: 1000; */
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.first {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100vw;
+  padding: 1rem 0;
+}
+
+.photo {
+  margin: 2rem;
+}
+
+.searcharea {
+  background-color: rgb(32, 32, 32);
+  width: 75vw;
+  padding-top: 2rem;
+
+}
+
+.search {
+  background-color: grey;
+  width: 68rem;
+  height: 3.5rem;
+  border-radius: 4rem;
+}
+
+input {
+  background-color: transparent;
+  width: 55rem;
+  height: 3rem;
+  border-radius: 4rem;
+  border: transparent;
+  /* position: fixed; */
+  font-size: 1.3rem;
+  padding-left: 2rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+input:focus {
+  outline: none;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icons {
+  background-color: rgb(32, 32, 32);
+}
+
+.search>span {
+  font-size: 1.3rem;
+  position: relative;
+}
+
+.search>span>i {
+  padding: 1rem 0.5rem 1rem 0.5rem;
+  right: 0;
+  color: rgb(32, 32, 32);
+}
+
+.sideicon {
+  font-size: 1.5rem;
+  padding: 3.5rem 1rem 2rem 1rem;
+  color: grey;
+}
+
+.second {
+  padding-left: 11rem;
+}
+
+.second>span {
+  padding: 2rem;
+  font-weight: 500;
+  color: grey;
+}
+
+
+main {
+  background-color: rgb(32, 32, 32);
+  display: flex;
+  border-top: 1px solid rgba(255, 255, 255, 0.261);
+  padding-top: 12rem;
+
+}
+
+.left {
+  background-color: rgb(32, 32, 32);
+  width: 72rem;
+  height: 100rem;
+}
+
+.right {
+  background-color: rgb(32, 32, 32);
+  width: 40rem;
+  height: 100rem;
+
+}
+
+.div11 {
+  margin: 3rem 3rem 0 3rem;
+  height: 10rem;
+  color: grey;
+  padding-left: 10rem;
+}
+
+.links {
+  /* background-color: yellow; */
+  height: 4rem;
+  display: flex;
+
+}
+
+
+.logo {
+  /* background-color: blue; */
+  height: 5rem;
+  width: 5rem;
+}
+
+.fa-instagram {
+  font-size: 3rem;
+  padding-top: 0.5rem;
+  padding-left: 0.8rem;
+  color: red;
+}
+
+
+.username::first-line {
+  font-size: 1rem;
+}
+
+.username {
+  padding-top: 0.5rem;
+  color: rgba(255, 255, 255, 0.853);
+}
+
+.handle {
+  font-size: 1.5rem;
+  color: rgb(7, 193, 255);
+}
+
+.description {
+  font-size: 1rem;
+}
+
+.links,
+.username,
+.handle {
+  cursor: pointer;
+}
+
+.links,
+.username,
+.handle:hover {
+  color: rgba(255, 255, 255, 0.69);
+  text-decoration: underline;
+}
+
+
+a {
+  text-decoration: none;
+
+}
+
+.line {
+  background-color: rgba(255, 255, 255, 0.319);
+  height: 100%;
+  width: 1px;
+  position: relative;
+  top: 5rem;
 }
