--- a/myapp/src/Header.css
+++ b/myapp/src/Header.css
@@ -1,10 +1,5 @@
-.body{
-    background-image: url('/public/Documentery_bg.jpg');
-    background-size: cover;
-    /* background-repeat:repeat; */
-}
 
-.navbar {
+.nav1 {
     background-color: #222;
     color: white;
     display: flex; 
@@ -13,12 +8,12 @@
     padding: 1rem 2rem;
   }
   
-  .logo {
+  .mysite {
     font-size: 1.5rem;
     font-weight: bold;
   }
   
-  .nav-links {
+  .lists {
     list-style: none;
     display: flex;
     gap: 2.5rem;
