--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,10 +1,20 @@
-  .app-wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
+.app-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   
-  .main-content {
-    flex: 1;
-  }
-  
+}
+
+.main-content {
+  flex: 1;
+}
+
+.bg-image{
+  position: absolute;
+  top: 0rem;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+  position: fixed;
+  opacity: 80%;
+}
