--- a/myapp/src/Contactus.css
+++ b/myapp/src/Contactus.css
@@ -1,7 +1,7 @@
 .contact-container {
     margin: 5rem ;
     padding: 2rem;
-    background: #f9f9f9;
+    background: #ffffff48;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
