--- a/myapp/src/TVShows.css
+++ b/myapp/src/TVShows.css
@@ -75,7 +75,7 @@
     width: 100%;
     height: 270px;
     object-fit: cover;
-    border-bottom: 2px solid #00ffc8;
+    border-bottom: 2px solid #ff0000;
   }
   
   .tv-card h4 {
