--- a/myapp/src/home.css
+++ b/myapp/src/home.css
@@ -51,10 +51,10 @@ h2 {
 
 .movie-slider {
   display: flex;
-  overflow-x:auto;
   gap: 1rem;
   scrollbar-width: none;
-  padding: 3rem 0;
+  padding: 3rem 0; 
+  overflow-x:auto;    
   
 }
 
@@ -81,7 +81,7 @@ h2 {
   width: 100%;
   height: 270px;
   object-fit: cover;
-  border-bottom: 2px solid #00ffc8;
+  border-bottom: 2px solid #007bff;
 }
 
 .movie-card h4 {
